gccida/c2/set_diagnostic_context
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/set_diagnostic_context/src/diagnostic.c:1943:1: error: unknown type name 'diagnostic_context_0'; did you mean 'diagnostic_context'?
diagnostic_context_0 *dc, 
^~~~~~~~~~~~~~~~~~~~
diagnostic_context
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/set_diagnostic_context/src/diagnostic.h:29:35: note: 'diagnostic_context' declared here
typedef struct diagnostic_context diagnostic_context;
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/set_diagnostic_context/src/diagnostic.c:1945:1: error: unknown type name 'va_list_0'; did you mean 'va_list'?
va_list_0 *args_ptr, 
^~~~~~~~~
va_list
/usr/include/stdio.h:46:20: note: 'va_list' declared here
typedef _G_va_list va_list;
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/set_diagnostic_context/src/diagnostic.c:1950:24: error: use of undeclared identifier 'diagnostic_context_0'
memset( dc, 0, sizeof( diagnostic_context_0)); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/set_diagnostic_context/src/diagnostic.c:1956:12: error: expected expression
*( _OWORD *)&dc->begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/set_diagnostic_context/src/diagnostic.c:1956:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dc->begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/set_diagnostic_context/src/diagnostic.c:1956:48: error: expected expression
*( _OWORD *)&dc->begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/set_diagnostic_context/src/diagnostic.c:1956:40: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dc->begin_diagnostic = *( _OWORD *)&global_dc->begin_diagnostic; 
                                       ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/set_diagnostic_context/src/obj/diagnostic.o] Error 1
